deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-test-app
spec:
  replicas: 2  # Number of pods
  selector:
    matchLabels:
      app: kubernetes-test-app
  template:
    metadata:
      labels:
        app: kubernetes-test-app
    spec:
      nodeSelector:
        node-role: worker  # Target the worker node
      containers:
      - name: kubernetes-test-app
        image: kubernetes-test-app:latest
        imagePullPolicy: Never  # Tell Kubernetes not to pull from a registry
        #If you don't want to pull image from local, instead you want to pull it from remote repo
        #image: jatin723/kubernetes-test-app:latest
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"
        ports:
        - containerPort: 5000
---
#service file

apiVersion: v1
kind: Service
metadata:
  name: kubernetes-test-app
spec:
  type: NodePort  # Change to NodePort to expose externally
  selector:
    app: kubernetes-test-app
  ports:
  - port: 8080       # External port
    targetPort: 5000 # Container port
    nodePort: 30007  # Optional: Specify a custom NodePort
