aws-eks-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sample-app
  name: deployment-kubernetes-test-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-test-app
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-test-app
    spec:
      containers:
      - image: 010438503006.dkr.ecr.ap-south-1.amazonaws.com/myapp:v2
        imagePullPolicy: Always
        name: kubernetes-test-app
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: sample-app
  name: service-kubernetes-test-app
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: kubernetes-test-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sample-app
  name: ingress-kubernetes-test-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-kubernetes-test-app
              port:
                number: 80
